--- a/Satzung.tex
+++ b/Satzung.tex
@@ -6,6 +6,8 @@
 \usepackage{float}
 %\usepackage{caption}
 %\usepackage{subcaption}
+\usepackage[margin=3cm]{geometry}
+
 \usepackage{subfigure}
 \usepackage{capt-of}
 \usepackage[utf8]{inputenc}
@@ -170,7 +172,7 @@ Er soll in das Vereinsregister eingetragen werden und trägt dann den Zusatz \te
 
 \vspace{2cm}
 \hspace{2cm}Ort\hspace{7cm}Datum
-\vspace{5cm}
+\vspace{6cm}
 \begin{center}
 Unterschriften
 \end{center}
