New file structure. Changed a wording.

--- a/Satzung/Satzung.tex
+++ b/Satzung/Satzung.tex
@@ -77,7 +77,7 @@ Er soll in das Vereinsregister eingetragen werden und trägt dann den Zusatz \te
 \begin{enumerate}
 \item Veranstaltung von Präsentationen und Vorträgen
 \item Veranstaltung von Workshops
-\item Bieten einer Möglichkeit zur Zusammenarbeit und Austausch innerhalb des Vereins
+\item Bieten einer Möglichkeit zu Zusammenarbeit und Austausch innerhalb des Vereins
 \end{enumerate}
   
 \end{enumerate}
