Added changes from the Mitgliederversammlung on 2015-12-07. These are: Clarification of the procedure to dismiss members (reminder has to be sent by the Vorstand). The new procedure to change the Satzung (which requires 3/4 majority of all present voters and (via email) sent-in abstains.

--- a/Satzung/Satzung.tex
+++ b/Satzung/Satzung.tex
@@ -97,7 +97,7 @@ Er soll in das Vereinsregister eingetragen werden und trägt dann den Zusatz \te
 \item Die Mitgliedschaft endet, abgesehen von Tod oder Auflösung, durch:
 	\begin{enumerate}
 		\item Austrittserklärung in Textform seitens des Mitglieds
-		\item Streichung aus der Mitgliederliste. Die Streichung eines Mitglieds aus der  Mitgliederliste kann durch die Mitgliederversammlung erfolgen, wenn das Mitglied über mehr als drei Monate ohne Angabe von Gründen inaktiv ist und auf mindestens einen einen Monat vor der Mitgliederversammlung zugesandten Hinweis in Textform nicht reagiert.
+		\item Streichung aus der Mitgliederliste. Die Streichung eines Mitglieds aus der  Mitgliederliste kann durch die Mitgliederversammlung erfolgen, wenn das Mitglied über mehr als drei Monate ohne Angabe von Gründen inaktiv ist und auf mindestens einen einen Monat vor der Mitgliederversammlung vom Vorstand zugesandten Hinweis in Textform nicht reagiert.
 		\item Die Streichung eines Mitglieds aus der Mitgliederliste erfolgt ebenso durch den Vorstand, wenn das Mitglied mit der Zahlung des Mitgliedsbeitrags mehr als einen Monat im Verzug ist und diesen trotz zweimaliger Mahnung, die in Textform zu erfolgen hat, nicht gezahlt hat.
 		\item Ein Mitglied wird aus dem Verein ausgeschlossen, wenn es in erheblichem Maße die Ziele des Vereins verletzt. Über den Ausschluss entscheidet der Vorstand. Gegen einen Ausschluss kann innerhalb von vier Wochen schriftlich Widerspruch eingelegt werden. Über diesen Widerspruch entscheidet die nächste Mitgliederversammlung.
 	\end{enumerate}
@@ -136,6 +136,7 @@ Er soll in das Vereinsregister eingetragen werden und trägt dann den Zusatz \te
 		\item Beschlussfassung über die Entlastung des Vorstandes
 		\item Wahl und Abwahl des Vorstands
 		\item Wahl des Kassenprüfers
+		\item Streichung von Mitgliedern aus der Mitgliederliste
 		\item Festlegung der Höhe der Mitgliedsbeiträge und der Aufnahmegebühr
 	\end{enumerate}
 	\item Zur Mitgliederversammlung wird von einem Vorstandsmitglied unter Angabe der  vorläufigen Tagesordnung mindestens zwei Wochen vorher eingeladen. Eingeladen
@@ -165,14 +166,14 @@ Er soll in das Vereinsregister eingetragen werden und trägt dann den Zusatz \te
 \section{Satzungsänderungen und Auflösung}
 \label{sec:satzungsaenderung}
 \begin{enumerate}
-	\item Über Satzungsänderungen, die Änderung des Vereinszwecks und die Auflösung  entscheidet die Mitgliederversammlung. Vorschläge zu Satzungsänderungen, Zweckänderungen und zur Auflösung sind den stimmberechtigten Mitgliedern bis spätestens einen Monat vor der Sitzung der Mitgliederversammlung zuzuleiten. Für die Beschlussfassung ist eine Mehrheit von drei Vierteln der anwesenden Stimmberechtigten erforderlich.
+	\item Über Satzungsänderungen, die Änderung des Vereinszwecks und die Auflösung  entscheidet die Mitgliederversammlung. Vorschläge zu Satzungsänderungen, Zweckänderungen und zur Auflösung sind den stimmberechtigten Mitgliedern bis spätestens einen Monat vor der Sitzung der Mitgliederversammlung zuzuleiten. Mitglieder können bis zu zwei Wochen vor der satzungsändernden Mitgliederversammlung eine Enthaltung in Textform an den Vorstand schicken. Für die Beschlussfassung ist eine Mehrheit von drei Vierteln an der Summe aus anwesenden Stimmberechtigten und in Textform abgegebenen Enthaltungen erforderlich.
 	\item Änderungen oder Ergänzungen der Satzung, die von der zuständigen Registerbehörde oder vom Finanzamt vorgeschrieben werden, werden vom Vorstand umgesetzt und bedürfen keiner Beschlussfassung durch die Mitgliederversammlung. Sie sind den Mitgliedern spätestens mit der nächsten Einladung zur Mitgliederversammlung mitzuteilen.
 	\item Bei Auflösung, bei Entziehung der Rechtsfähigkeit des Vereins oder bei Wegfall der steuerbegünstigten Zwecke fällt das gesamte Vermögen an die Fachschaft MPI der TU München, und zwar mit der Auflage, es entsprechend seinen bisherigen Zielen und Aufgaben ausschließlich und unmittelbar gemäß \ref{sec:ziele} zu verwenden.
 \end{enumerate}
 
 \vspace{2cm}
 \hspace{2cm}Ort\hspace{7cm}Datum
-\vspace{6cm}
+\vspace{5cm}
 \begin{center}
 Unterschriften
 \end{center}
